Buttons cut off (FIXED)

--- a/Welcome/styles.css
+++ b/Welcome/styles.css
@@ -28,13 +28,16 @@ body{
     justify-content: flex-end;
     gap: 20px;
     background-color: white;
-    margin-left: -9px;
+    /*margin-left: -9px;
     margin-right: -9px;
-    margin-top: -9px;
+    margin-top: -9px;*/
     height: 60px;
     align-items: center;
     padding: 0 2rem;
+    overflow: hidden;
+    width: 100%;
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    box-sizing: border-box;
 }
 
 .navurl {
